fixed third project not showing up on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
 }
 
 .container h1, .container h3, .container h5 {
@@ -73,6 +72,12 @@ img{
   color: #000000;
 }
 @media (max-width: 480px){
+  .projects-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   .container h1{
     font-size: 40px;
   }
@@ -93,8 +98,22 @@ img{
     margin-left: 50%;
     gap: 20px;
   }
-  img{
-    width: 310px;
-    height: 250px;
+  .project {
+    width: 100%;
+    margin-bottom: 30px;
   }
+  
+  .project h1 {
+    font-size: 24px;
+  }
+  
+  .project img {
+    width: 100%;
+    height: 200px;
+    max-width: 310px;
+  }
+}
+
+.project {
+  margin-bottom: 20px;
 }
